feat: accept answer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,16 @@ services:
       db:
         condition: service_healthy
 
+  node:
+    image: node:20-alpine
+    container_name: knowledge-hub-node
+    working_dir: /var/www/html
+    volumes:
+      - ./app:/var/www/html
+    networks:
+      - app-network
+    command: sh -c "npm install && npm run build"
+
   web:
     image: nginx:alpine
     container_name: knowledge-hub-web
