--- a/app/.env.example
+++ b/app/.env.example
@@ -63,3 +63,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# AI (optional - enable and set keys to use AI features)
+# AI_ENABLED=true
+# AI_AUTO_ANSWER=false
+# AI_PRIMARY_PROVIDER=openai
+# OPENAI_API_KEY=
+# GEMINI_API_KEY=
+# ANTHROPIC_API_KEY=
