--- a/app/.env.example
+++ b/app/.env.example
@@ -66,8 +66,11 @@ VITE_APP_NAME="${APP_NAME}"
 
 # AI (optional - enable and set keys to use AI features)
 # AI_ENABLED=true
-# AI_AUTO_ANSWER=false
 # AI_PRIMARY_PROVIDER=openai
 # OPENAI_API_KEY=
 # GEMINI_API_KEY=
+# GEMINI_MODEL=gemini-2.0-flash
 # ANTHROPIC_API_KEY=
+# OpenRouter (unified API - https://openrouter.ai)
+# OPENROUTER_API_KEY=
+# OPENROUTER_MODEL=openai/gpt-4o-mini
