--- a/app/.env.example
+++ b/app/.env.example
@@ -20,12 +20,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=knowledge_hub
+DB_USERNAME=user
+DB_PASSWORD=password
+
+# For local setup WITHOUT Docker, use: DB_HOST=127.0.0.1
+# For SQLite: DB_CONNECTION=sqlite, DB_DATABASE=/absolute/path/to/database.sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
